# self_distributing_systems

./: .gitignore  README.md  build-and-run-distributor.sh  build-and-run-implementation-provider.sh  build.sh
client/: Add.dn  Client.dn  Client1.dn  Client2.dn  Get.dn
constant/data/adt/: List.heap.dn
distributor/: Distributor.dn  RemoteDist.dn  RemoteList.dn
distributor/composition/: Assembly.dn
distributor/data/adt/: ListCP.dn  ListCPAlternate.dn  ListCPDynamicSharding.dn  ListCPGroup.dn  ListCPPropagate.dn  ListCPSharding.dn
distributor/hash/: Multiplicative.dn
distributor/monitoring/: Container.dn  Perception.dn  ResponseTime.dn
distributor/monitoring/proxies/: ServerProxy.dn
distributor/proxy/: .manifest  DistProxy.dn  ListSP.dn
distributor/resources/composition/: Assembly.dn
distributor/resources/hash/: Multiplicative.dn
distributor/resources/monitoring/: BeingMonitored.dn  Container.dn  Perception.dn  ResponseTime.dn
distributor/resources/proxy/: DistProxy.dn  Proxy.dn
distributor/util/: DescriptionHandler.dn
implementation-provider/: Dockerfile  implementation_provider.py  pyproject.toml
implementation-provider/src/: log_config.py
implementation-provider/src/templates/: remote-dist-service.yaml  remote-dist.yaml
python_scripts/: example.py  run_dynamic_test.py
scripts/bash/: build-dana.sh  build-implementation-provider.sh  build-local-remote-dist.sh  build-remote-dist.sh  setup-first-experiment.sh  setup-implementation-provider.sh
server/: main.dn
server/http/: HTTPUtil.dn
server/server/: Server.dn
(+15 files in other folders)
